--- a/style.css
+++ b/style.css
@@ -15,20 +15,20 @@
 
 :root {
     --text-color: #f5f5f5;
-    --hover-color: #12f7ff;
+    --hover-color: #ff9800; /* Zmiana na pomarańczowy */
     --bg-color: #292e33;
     --second-bg-color: #080808;
     --big-font: 2.5rem;
     --normal-font: 2rem;
-    --neon-box-shadow: 0 0 0.5rem #12f7ff;
-    --font-neon-text-shadow: 0 0 10px rgba(18, 247, 255, 0.3),
-        0 0 20px rgba(18, 247, 255, 0.3),
-        0 0 30px rgba(18, 247, 255, 0.3),
-        0 0 40px rgba(18, 247, 255, 0.3),
-        0 0 70px rgba(18, 247, 255, 0.3),
-        0 0 80px rgba(18, 247, 255, 0.3),
-        0 0 100px rgba(18, 247, 255, 0.3),
-        0 0 150px rgba(18, 247, 255, 0.3);
+    --neon-box-shadow: 0 0 0.5rem #ff9800; /* Zmiana na pomarańczowy */
+    --font-neon-text-shadow: 0 0 10px rgba(255, 152, 0, 0.3),
+        0 0 20px rgba(255, 152, 0, 0.3),
+        0 0 30px rgba(255, 152, 0, 0.3),
+        0 0 40px rgba(255, 152, 0, 0.3),
+        0 0 70px rgba(255, 152, 0, 0.3),
+        0 0 80px rgba(255, 152, 0, 0.3),
+        0 0 100px rgba(255, 152, 0, 0.3),
+        0 0 150px rgba(255, 152, 0, 0.3); /* Zmiana na pomarańczowy */
 }
 
 body{
@@ -357,7 +357,7 @@ nav ul li a:hover{
     border-radius: 12px;
     position: absolute;
     inset: 0;
-    background: radial-gradient(circle, rgba(0,0,0,0.3), #12f7ff);
+    background: radial-gradient(circle, rgba(0,0,0,0.3), #ff9800); /* Zmiana na pomarańczowy */
     opacity: 0;
     transition: all 0.3s ease-in-out;
 }
