--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* reset css */
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -15,12 +15,14 @@
 
 :root {
     --text-color: #f5f5f5;
-    --hover-color: #ff9800; /* Zmiana na pomarańczowy */
+    --hover-color: #ff9800;
+    /* Zmiana na pomarańczowy */
     --bg-color: #292e33;
     --second-bg-color: #080808;
     --big-font: 2.5rem;
     --normal-font: 2rem;
-    --neon-box-shadow: 0 0 0.5rem #ff9800; /* Zmiana na pomarańczowy */
+    --neon-box-shadow: 0 0 0.5rem #ff9800;
+    /* Zmiana na pomarańczowy */
     --font-neon-text-shadow: 0 0 10px rgba(255, 152, 0, 0.3),
         0 0 20px rgba(255, 152, 0, 0.3),
         0 0 30px rgba(255, 152, 0, 0.3),
@@ -28,23 +30,24 @@
         0 0 70px rgba(255, 152, 0, 0.3),
         0 0 80px rgba(255, 152, 0, 0.3),
         0 0 100px rgba(255, 152, 0, 0.3),
-        0 0 150px rgba(255, 152, 0, 0.3); /* Zmiana na pomarańczowy */
+        0 0 150px rgba(255, 152, 0, 0.3);
+    /* Zmiana na pomarańczowy */
 }
 
-body{
+body {
     background: var(--bg-color);
     color: var(--text-color);
 }
 
-a{
+a {
     color: var(--text-color);
 }
 
-span{
+span {
     color: var(--hover-color);
 }
 
-nav{
+nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -59,57 +62,61 @@ nav{
     z-index: 1000;
 }
 
-nav ul{
+nav ul {
     display: flex;
     align-items: center;
     gap: 40px;
 }
 
-nav ul li{
+nav ul li {
     font-size: 1.1rem;
 }
 
-nav ul li a:hover{
+nav ul li a:hover {
     color: var(--hover-color);
 }
 
-.logo{
+.logo {
     font-size: 1.4rem;
 }
 
-.menu-icon{
+.menu-icon {
     display: none;
 }
 
-.bx-menu{
+.bx-menu {
     font-size: 1.8rem;
     cursor: pointer;
 }
 
 /* hero section */
 
-.hero-section{
+.hero-section {
     padding: 60px 8%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.hero-section .left-section h1{
+.hero-section .left-section h1 {
     font-size: 2.5rem;
 }
-.hero-section .left-section h2{
+
+.hero-section .left-section h2 {
     font-size: 1.5rem;
     padding: 12px 0;
 }
-.hero-section .left-section p{
+
+.hero-section .left-section p {
     font-size: 1.1rem;
     text-wrap: balance;
 }
-.btn-box{
+
+.btn-box {
     margin-block: 12px;
 }
-.btn{
+
+.btn {
     padding: 14px 30px;
     background: var(--hover-color);
     box-shadow: var(--neon-box-shadow);
@@ -122,52 +129,52 @@ nav ul li a:hover{
     transition: 0.3s ease-in-out;
 }
 
-.btn:hover{
+.btn:hover {
     background: var(--bg-color);
     color: var(--hover-color);
     box-shadow: var(--font-neon-text-shadow);
 }
 
-.social-icons{
+.social-icons {
     display: flex;
     align-items: center;
     gap: 10px;
     margin-top: 30px;
 }
 
-.social-icons i{
+.social-icons i {
     padding: 0.5rem;
     background: var(--hover-color);
     border: 3px solid var(--hover-color);
     color: var(--bg-color);
-    font-size: 1.1rem ;
+    font-size: 1.1rem;
     border-radius: 5px;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
 }
 
-.social-icons i:hover{
+.social-icons i:hover {
     box-shadow: var(--font-neon-text-shadow);
 }
 
-.social-icons i:hover{
+.social-icons i:hover {
     background: var(--second-bg-color);
     color: var(--hover-color);
 }
 
 
-.hero-section .right-section{
+.hero-section .right-section {
     max-width: 500px;
     width: 100%;
 }
 
-.hero-section .right-section img{
+.hero-section .right-section img {
     width: 100%;
 }
 
 /* about section */
 
-.about-section{
+.about-section {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -178,34 +185,35 @@ nav ul li a:hover{
     padding: 80px 8%;
     padding-top: 100px;
     gap: 1rem;
-    background-color: var(--second-bg-color);;
+    background-color: var(--second-bg-color);
+    ;
 }
 
-.about-section h1{
+.about-section h1 {
     font-size: 3rem;
     font-weight: 700;
 }
 
-.about-section h2{
+.about-section h2 {
     font-size: 1.2rem;
     font-weight: 600;
 }
 
-.about-section p{
+.about-section p {
     color: #bcbcbc;
     text-wrap: balance;
 }
 
 /* skill-container */
 
-.skill-container{
+.skill-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 80px 8%;
 }
 
-.skill-container .left-section{
+.skill-container .left-section {
     width: 50%;
     display: flex;
     align-items: center;
@@ -213,19 +221,19 @@ nav ul li a:hover{
     flex-wrap: wrap;
 }
 
-.skill-container .left-section img{
+.skill-container .left-section img {
     width: 80px;
 }
 
-.skill-container .right-section{
+.skill-container .right-section {
     width: 50%;
 }
 
-.skill-container .right-section .progress-container{
+.skill-container .right-section .progress-container {
     width: 100%;
 }
 
-.skill-name-box{
+.skill-name-box {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -233,7 +241,7 @@ nav ul li a:hover{
     padding-top: 25px;
 }
 
-.line-background{
+.line-background {
     background: var(--second-bg-color);
     height: 13px;
     width: 100%;
@@ -241,94 +249,105 @@ nav ul li a:hover{
     border-radius: 25px;
     overflow: hidden;
 }
-.line-background .line{
+
+.line-background .line {
     height: 13px;
     border-radius: 25px;
     background: var(--hover-color);
     box-shadow: var(--neon-box-shadow);
 }
 
-.line-background .html{
-    width: 72%;
+.line-background .java {
+    width: 70%;
     animation: html 2s linear;
 }
-.line-background .css{
+
+.line-background .css {
     width: 64%;
     animation: css 2s linear;
 }
-.line-background .javascript{
+
+.line-background .javascript {
     width: 82%;
     animation: javascrpt 2s linear;
 
 }
-.line-background .react{
+
+.line-background .react {
     width: 92%;
     animation: react 2s linear;
 
 }
-.line-background .nodejs{
+
+.line-background .nodejs {
     width: 50%;
     animation: nodejs 2s linear;
 }
 
-@keyframes html{
+@keyframes html {
     from {
         width: 0%;
     }
-    to{
+
+    to {
         width: 72%;
     }
 }
 
-@keyframes css{
+@keyframes css {
     from {
         width: 0%;
     }
-    to{
+
+    to {
         width: 62%;
     }
 }
 
-@keyframes javascript{
+@keyframes javascript {
     from {
         width: 0%;
     }
-    to{
+
+    to {
         width: 82%;
     }
 }
 
-@keyframes react{
+@keyframes react {
     from {
         width: 0%;
     }
-    to{
+
+    to {
         width: 92%;
     }
 }
-@keyframes nodejs{
+
+@keyframes nodejs {
     from {
         width: 0%;
     }
-    to{
+
+    to {
         width: 52%;
     }
 }
 
 /* portfolio section */
 
-.portfolio-section{
+.portfolio-section {
     background: var(--second-bg-color);
     padding: 80px 8%;
     padding-top: 100px;
 }
 
-.portfolio-section h2{
+.portfolio-section h2 {
     text-align: center;
     font-size: 3rem;
 }
 
-.card-container{
+.card-container {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -345,36 +364,37 @@ nav ul li a:hover{
     overflow: hidden;
 }
 
-.card img{
+.card img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.card .layer{
+.card .layer {
     width: 100%;
     height: 100%;
     border-radius: 12px;
     position: absolute;
     inset: 0;
-    background: radial-gradient(circle, rgba(0,0,0,0.3), #ff9800); /* Zmiana na pomarańczowy */
+    background: radial-gradient(circle, rgba(0, 0, 0, 0.3), #ff9800);
+    /* Zmiana na pomarańczowy */
     opacity: 0;
     transition: all 0.3s ease-in-out;
 }
 
-.card:hover .layer{
+.card:hover .layer {
     opacity: 1;
 }
 
-.card .icon{
+.card .icon {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     opacity: 0;
 }
 
-.card i{
+.card i {
     font-size: 1.1rem;
     padding: 0.8rem;
     border-radius: 50%;
@@ -382,18 +402,18 @@ nav ul li a:hover{
     color: var(--bg-color);
 }
 
-.card i:hover{
+.card i:hover {
     background: var(--bg-color);
     color: var(--text-color);
 }
 
-.card:hover .icon{
+.card:hover .icon {
     opacity: 1;
 }
 
 /* contact-section */
 
-.contact-section{
+.contact-section {
     padding: 80px 8%;
     padding-top: 100px;
     display: flex;
@@ -403,13 +423,13 @@ nav ul li a:hover{
     gap: 40px;
 }
 
-.contact-section h1{
+.contact-section h1 {
     font-size: 3rem;
     font-weight: 700;
     text-align: center;
 }
 
-form{
+form {
     max-width: 500px;
     width: 100%;
     display: flex;
@@ -418,7 +438,8 @@ form{
     gap: 1rem;
 }
 
-form input, form textarea{
+form input,
+form textarea {
     width: 100%;
     padding: 10px 14px;
     background: var(--second-bg-color);
@@ -427,25 +448,25 @@ form input, form textarea{
     border: 2px solid var(--hover-color);
 }
 
-form textarea{
+form textarea {
     height: 150px;
 }
 
 /* footer */
 
-footer{
+footer {
     background: var(--second-bg-color);
     padding: 20px 0;
     text-align: center;
 }
 
-footer p{
+footer p {
     font-size: 13px;
 }
 
 /* back to top btn */
 
-.bx-chevron-up{
+.bx-chevron-up {
     position: fixed;
     bottom: 30px;
     right: 30px;
@@ -463,18 +484,18 @@ footer p{
     transition: 0.4s;
 }
 
-.bx-chevron-up:hover{
+.bx-chevron-up:hover {
     box-shadow: var(--font-neon-text-shadow);
 }
 
 /* media queries */
 
 @media (max-width: 820px) {
-    nav{
+    nav {
         padding-inline: 5%;
     }
 
-    nav ul{
+    nav ul {
         position: absolute;
         top: 80px;
         left: 0;
@@ -488,31 +509,36 @@ footer p{
         transition: max-height 0.3s ease-in-out;
     }
 
-    nav ul li:first-child{
+    nav ul li:first-child {
         padding-top: 10px;
     }
-    nav ul li:last-child{
+
+    nav ul li:last-child {
         padding-bottom: 10px;
     }
 
-    .menu-icon{
+    .menu-icon {
         display: block;
     }
 
-    .hero-section{
+    .hero-section {
         flex-direction: column-reverse;
     }
-    .hero-section .left-section,.hero-section .right-section{
+
+    .hero-section .left-section,
+    .hero-section .right-section {
         width: 100%;
     }
 }
 
 @media (max-width: 700px) {
-    .skill-container{
+    .skill-container {
         flex-direction: column;
         gap: 30px;
     }
-    .skill-container .left-section, .skill-container .right-section{
+
+    .skill-container .left-section,
+    .skill-container .right-section {
         width: 100%;
     }
 }
